lesson-3/Exercise-1/cheddar-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: cheddar-deployment
  labels:
    app: cheddar
spec:
  replicas: 2
  selector:
    matchLabels:
      app: cheddar
  template:
    metadata:
      labels:
        app: cheddar
    spec:
      containers:
      - name: cheddar
        image: andreybyhalenko/cheddar:1.0.3
        resources:
          requests:
            memory: "64Mi"
            cpu: "250m"
          limits:
            memory: "128Mi"
            cpu: "500m"
        ports:
        - containerPort: 80
