lesson-3/Exercise-1/gouda-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gouda-deployment
  labels:
    app: gouda
spec:
  replicas: 2
  selector:
    matchLabels:
      app: gouda
  template:
    metadata:
      labels:
        app: gouda
    spec:
      containers:
      - name: gouda
        image: andreybyhalenko/gouda:1.0.1
        resources:
          requests:
            memory: "64Mi"
            cpu: "250m"
          limits:
            memory: "128Mi"
            cpu: "500m"
        ports:
        - containerPort: 80
