lesson-3/Exercise-1/cheddar-service.yml
apiVersion: v1
kind: Service
metadata:
  name: cheddar-service
  labels:
    app: cheddar
spec:
  selector:
    app: cheddar
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
