lesson-3/Exercise-1/gouda-service.yml
apiVersion: v1
kind: Service
metadata:
  name: gouda-service
  labels:
    app: gouda
spec:
  selector:
    app: gouda
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
