lesson-3/Exercise-1/cheese-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: cheese-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  ingressClassName: nginx
  tls:
  - hosts:
    - ams.cheese.com
    secretName: cheese-tls
  rules:
  - host: ams.cheese.com
    http:
      paths:
      - path: /gouda(/|$)(.*)
        pathType: ImplementationSpecific
        backend:
          service:
            name: gouda-service
            port:
              number: 3002
      - path: /cheddar(/|$)(.*)
        pathType: ImplementationSpecific
        backend:
          service:
            name: cheddar-service
            port:
              number: 3001
